--- a/git/crux-ports/file/disputils/Pkgfile.html
+++ b/git/crux-ports/file/disputils/Pkgfile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Pkgfile (517B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Pkgfile (518B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -44,7 +44,7 @@
 </pre></td><td><pre>
 # Description: Set of utilities for getting info about connected displays.
 # URL:         https://arcetera.moe/git/disputils/
-# Packager:    tudurom, xenogenesis@openmailbox.org
+# Maintainer:  Tudor Roman, tudurom at gmail dot com
 # Depends on:  git xorg-libxcb
 
 name=disputils
