--- a/git/crux-ports/file/lemonbar-border/Pkgfile.html
+++ b/git/crux-ports/file/lemonbar-border/Pkgfile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Pkgfile (573B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Pkgfile (530B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -40,12 +40,10 @@
 <a href="#l22" id="l22">22</a>
 <a href="#l23" id="l23">23</a>
 <a href="#l24" id="l24">24</a>
-<a href="#l25" id="l25">25</a>
 </pre></td><td><pre>
 # Description: Lemonbar with borders.
 # URL:         https://github.com/dark-yux/bar
-# Packager:    ix, arcetera@openmailbox.org
-# Maintainer:  tudurom, xenogenesis@openmailbox.org
+# Maintainer:  Tudor Roman, tudurom at gmail dot com
 # Depends on:  xorg-libxcb
 
 name=lemonbar-border
