--- a/git/crux-ports/file/mkb/Pkgfile.html
+++ b/git/crux-ports/file/mkb/Pkgfile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Pkgfile (425B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Pkgfile (424B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -42,7 +42,7 @@
 </pre></td><td><pre>
 # Description: Represent a percentage as a fancy progress bar.
 # URL:         http://git.z3bra.org/mkb
-# Packager:    tudurom, xenogenesis@openmailbox.org
+# Maintainer:  Tudor Roman, tudurom at gmail dot com
 # Depends on:
 
 name=mkb
@@ -59,7 +59,7 @@ build() {
 		git clone git://z3bra.org/mkb -b master $name
 		cd $name
 	fi
-  
+
   make
   make install PREFIX=&quot;$PKG/usr&quot;
 }
