--- a/git/crux-ports/file/mongodb-bin/Pkgfile.html
+++ b/git/crux-ports/file/mongodb-bin/Pkgfile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Pkgfile (568B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Pkgfile (563B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -38,11 +38,11 @@
 </pre></td><td><pre>
 # Description: MongoDB (from &quot;humongous&quot;) is an open-source document database
 # URL:         https://www.mongodb.org/
-# Maintainer:  Kristian Lehmann, email at zero-io dot net
+# Maintainer:  Tudor Roman, tudurom at gmail dot com
 # Depends on:
 
 name=mongodb-bin
-version=3.2.6
+version=3.2.9
 release=1
 source=(https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-$version.tgz mongodb.conf mongodb.rc)
 
