--- a/git/crux-ports/file/thermald/Pkgfile.html
+++ b/git/crux-ports/file/thermald/Pkgfile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Pkgfile (438B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Pkgfile (398B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -34,18 +34,16 @@
 <a href="#l16" id="l16">16</a>
 <a href="#l17" id="l17">17</a>
 <a href="#l18" id="l18">18</a>
-<a href="#l19" id="l19">19</a>
 </pre></td><td><pre>
 # Description: Thermal daemon.
 # URL:         https://github.com/01org/thermal_daemon
-# Packager:    ix, arcetera@openmailbox.org
-# Maintainer:  tudurom, xenogenesis@openmailbox.org
+# Maintainer:  Tudor Roman, tudurom at gmail dot com
 # Depends on:  dbus dbus-glib
 
 name=thermald
-version=1.4.3
+version=1.5.3
 release=1
-source=(https://github.com/01org/thermal_daemon/archive/v1.4.3.tar.gz)
+source=(https://github.com/01org/thermal_daemon/archive/v$version.tar.gz)
 
 build() {
 	cd thermal_daemon-$version
