--- a/git/crux-ports/log.html
+++ b/git/crux-ports/log.html
@@ -18,6 +18,12 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-09-20 16:36</td><td><a href="commit/286fe801e895da530b81a615750cea189902e82c.html">stuff</a></td><td>Tudor</td><td class="num">6</td><td class="num">+4</td><td class="num">-80</td></tr>
+<tr><td>2016-09-19 13:59</td><td><a href="commit/d001573bd4e722ac69a09c048d1405b36a18d9fc.html">cleanup part 2</a></td><td>Tudor</td><td class="num">14</td><td class="num">+14</td><td class="num">-14</td></tr>
+<tr><td>2016-09-19 13:53</td><td><a href="commit/2687f2d42e5414434f449dac1d4b9f86c45e9422.html">cleanup part 1</a></td><td>Tudor</td><td class="num">115</td><td class="num">+54</td><td class="num">-2719</td></tr>
+<tr><td>2016-09-15 15:30</td><td><a href="commit/c5bc33c39350b93312549c4ea4bafc348385621f.html">unclutter-xfixes: don&apos;t install license</a></td><td>Tudor</td><td class="num">1</td><td class="num">+0</td><td class="num">-1</td></tr>
+<tr><td>2016-09-13 14:49</td><td><a href="commit/4a52b9837bc175732b4408a85f835015f5da911f.html">remove: neofetch</a></td><td>Tudor</td><td class="num">3</td><td class="num">+0</td><td class="num">-103</td></tr>
+<tr><td>2016-09-12 18:35</td><td><a href="commit/51acdaf152793d2b5fad0c728bae4813dde83bf0.html">remove: go</a></td><td>Tudor</td><td class="num">3</td><td class="num">+0</td><td class="num">-6373</td></tr>
 <tr><td>2016-09-08 10:24</td><td><a href="commit/8a0ce557e983280bdee81ed0dfcb29394ece3951.html">add prtstuff and patched pcre2</a></td><td>Tudor</td><td class="num">8</td><td class="num">+199</td><td class="num">-3</td></tr>
 <tr><td>2016-05-14 20:57</td><td><a href="commit/8d85f6316a9071164d78cd4ee0093558c68bd8c9.html">neofetch: xprop is optional</a></td><td>Tudor</td><td class="num">2</td><td class="num">+6</td><td class="num">-2</td></tr>
 <tr><td>2016-05-05 12:06</td><td><a href="commit/3e9cc2ec08ba49cec1b68326ba2d79a5e0400e33.html">go: bump version</a></td><td>Tudor</td><td class="num">3</td><td class="num">+7</td><td class="num">-3</td></tr>
