--- a/git/windowchef/file/BUGS.html
+++ b/git/windowchef/file/BUGS.html
@@ -15,10 +15,10 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> BUGS (61B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> BUGS (10B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 </pre></td><td><pre>
-- If compiled with -O2 fullscreen does not work as expected.
+None. (?)
 </pre></td></tr></table>
 </div>
 </body>
