--- a/git/crux-ports/file/alt-ca-certificates/Pkgfile.html
+++ b/git/crux-ports/file/alt-ca-certificates/Pkgfile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Pkgfile (717B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Pkgfile (764B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -38,10 +38,12 @@
 <a href="#l20" id="l20">20</a>
 <a href="#l21" id="l21">21</a>
 <a href="#l22" id="l22">22</a>
+<a href="#l23" id="l23">23</a>
 </pre></td><td><pre>
-# Description: Common CA certificates
-# URL: http://packages.debian.org/sid/ca-certificates
-# Packager: Xin Wang, dram dot wang at gmail dot com
+# Description: Common CA certificates from the Debian project.
+# URL:         http://packages.debian.org/sid/ca-certificates
+# Maintainer:  Tudor Roman, tudurom at gmail dot com
+# Depends on:
 
 name=alt-ca-certificates
 version=20160104
