--- a/git/crux-ports/file/autocutsel/Pkgfile.html
+++ b/git/crux-ports/file/autocutsel/Pkgfile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Pkgfile (486B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Pkgfile (487B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -46,7 +46,7 @@
 </pre></td><td><pre>
 # Description: Automated xcutsel.
 # URL: 	       https://github.com/sigmike/autocutsel
-# Packager:    tudurom, xenogenesis@openmailbox.org
+# Maintainer:  Tudor Roman, tudurom at gmail dot com
 # Depends on:  xorg-libxav
 
 name=autocutsel
