--- a/git/crux-ports/file/light/.footprint.html
+++ b/git/crux-ports/file/light/.footprint.html
@@ -15,14 +15,22 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .footprint (91B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .footprint (251B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
+<a href="#l4" id="l4">4</a>
+<a href="#l5" id="l5">5</a>
+<a href="#l6" id="l6">6</a>
+<a href="#l7" id="l7">7</a>
 </pre></td><td><pre>
 drwxr-xr-x	root/root	usr/
 drwxr-xr-x	root/root	usr/bin/
--rwsr-xr-x	root/root	usr/bin/light
+-rwxr-xr-x	root/root	usr/bin/light
+drwxr-xr-x	root/root	usr/share/
+drwxr-xr-x	root/root	usr/share/man/
+drwxr-xr-x	root/root	usr/share/man/man1/
+-rw-r--r--	root/root	usr/share/man/man1/light.1.gz
 </pre></td></tr></table>
 </div>
 </body>
