--- a/git/crux-ports/file/ncmpcpp/Pkgfile.html
+++ b/git/crux-ports/file/ncmpcpp/Pkgfile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Pkgfile (733B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Pkgfile (653B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -42,12 +42,10 @@
 <a href="#l24" id="l24">24</a>
 <a href="#l25" id="l25">25</a>
 <a href="#l26" id="l26">26</a>
-<a href="#l27" id="l27">27</a>
 </pre></td><td><pre>
 # Description: An almost exact clone of ncmpc with some new features.
 # URL:         http://rybczak.net/ncmpcpp
-# Packager:    Michael Savage, mike at mikejsavage dot co dot uk
-# Maintainer:  6c37 Team, https://github.com/6c37/crux-ports/issues
+# Maintainer:  Tudor Roman, tudurom at gmail dot com
 # Depends on:  ncurses libmpdclient boost taglib fftw
 
 name=ncmpcpp
