--- a/git/crux-ports/file/skroll/Pkgfile.html
+++ b/git/crux-ports/file/skroll/Pkgfile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Pkgfile (575B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Pkgfile (576B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -46,7 +46,7 @@
 </pre></td><td><pre>
 # Description: Small utility that you can use to make a text scroll.
 # URL:         http://git.z3bra.org/skroll
-# Packager:    tudurom, xenogenesis@openmailbox.org
+# Maintainer:  Tudor Roman, tudurom at gmail dot com
 # Depends on:
 
 name=skroll
