--- a/git/crux-ports/file/thermald/.footprint.html
+++ b/git/crux-ports/file/thermald/.footprint.html
@@ -36,25 +36,25 @@
 <a href="#l18" id="l18">18</a>
 <a href="#l19" id="l19">19</a>
 </pre></td><td><pre>
-drwxr-xr-x	arc/users	etc/
-drwxr-xr-x	arc/users	etc/dbus-1/
-drwxr-xr-x	arc/users	etc/dbus-1/system.d/
--rw-r--r--	arc/users	etc/dbus-1/system.d/org.freedesktop.thermald.conf
-drwxr-xr-x	arc/users	etc/init/
--rw-r--r--	arc/users	etc/init/thermald.conf
-drwxr-xr-x	arc/users	usr/
-drwxr-xr-x	arc/users	usr/etc/
-drwxr-xr-x	arc/users	usr/etc/thermald/
--rw-r--r--	arc/users	usr/etc/thermald/thermal-conf.xml
--rw-r--r--	arc/users	usr/etc/thermald/thermal-cpu-cdev-order.xml
-drwxr-xr-x	arc/users	usr/sbin/
--rwxr-xr-x	arc/users	usr/sbin/thermald
-drwxr-xr-x	arc/users	usr/share/
-drwxr-xr-x	arc/users	usr/share/man/
-drwxr-xr-x	arc/users	usr/share/man/man5/
--rw-r--r--	arc/users	usr/share/man/man5/thermal-conf.xml.5.gz
-drwxr-xr-x	arc/users	usr/share/man/man8/
--rw-r--r--	arc/users	usr/share/man/man8/thermald.8.gz
+drwxr-xr-x	root/root	etc/
+drwxr-xr-x	root/root	etc/dbus-1/
+drwxr-xr-x	root/root	etc/dbus-1/system.d/
+-rw-r--r--	root/root	etc/dbus-1/system.d/org.freedesktop.thermald.conf
+drwxr-xr-x	root/root	etc/init/
+-rw-r--r--	root/root	etc/init/thermald.conf
+drwxr-xr-x	root/root	usr/
+drwxr-xr-x	root/root	usr/etc/
+drwxr-xr-x	root/root	usr/etc/thermald/
+-rw-r--r--	root/root	usr/etc/thermald/thermal-conf.xml
+-rw-r--r--	root/root	usr/etc/thermald/thermal-cpu-cdev-order.xml
+drwxr-xr-x	root/root	usr/sbin/
+-rwxr-xr-x	root/root	usr/sbin/thermald
+drwxr-xr-x	root/root	usr/share/
+drwxr-xr-x	root/root	usr/share/man/
+drwxr-xr-x	root/root	usr/share/man/man5/
+-rw-r--r--	root/root	usr/share/man/man5/thermal-conf.xml.5.gz
+drwxr-xr-x	root/root	usr/share/man/man8/
+-rw-r--r--	root/root	usr/share/man/man8/thermald.8.gz
 </pre></td></tr></table>
 </div>
 </body>
