--- a/git/crux-ports/file/unclutter-xfixes/Pkgfile.html
+++ b/git/crux-ports/file/unclutter-xfixes/Pkgfile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Pkgfile (627B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Pkgfile (564B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -42,11 +42,10 @@
 <a href="#l24" id="l24">24</a>
 <a href="#l25" id="l25">25</a>
 <a href="#l26" id="l26">26</a>
-<a href="#l27" id="l27">27</a>
 </pre></td><td><pre>
 # Description: A rewrite of unclutter using the x11-xfixes extension
 # URL: 	       https://github.com/airblader/unclutter-xfixes
-# Packager:    tudurom, xenogenesis@openmailbox.org
+# Maintainer:  Tudor Roman, tudurom at gmail dot com
 # Depends on:  xorg-libxi xorg-libx11 xorg-libxfixes libev asciidoc
 
 name=unclutter-xfixes
@@ -69,7 +68,6 @@ build() {
 	make all
 
 	make DESTDIR=&quot;$PKG&quot; install
-	install -Dm644 LICENSE &quot;$PKG/usr/share/licenses/$name/LICENSE&quot;
 }
 </pre></td></tr></table>
 </div>
