--- a/git/crux-ports/file/zathura-pdf-poppler/Pkgfile.html
+++ b/git/crux-ports/file/zathura-pdf-poppler/Pkgfile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Pkgfile (434B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Pkgfile (433B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -35,7 +35,7 @@
 </pre></td><td><pre>
 # Description: Zathura plugin for PDF support through poppler
 # URL:         https://pwmt.org/projects/zathura-pdf-poppler/
-# Packager:    tudurom, xenogenesis@openmailbox.org
+# Maintainer:  Tudor Roman, tudurom at gmail dot com
 # Depends on:  zathura poppler-glib
 
 name=zathura-pdf-poppler
@@ -46,8 +46,8 @@ source=(https://pwmt.org/projects/zathura-pdf-poppler/download/zathura-pdf-poppl
 build() {
 	cd $name-$version
 
-  make
-  make install DESTDIR=&quot;$PKG&quot;
+	make
+	make install DESTDIR=&quot;$PKG&quot;
 }
 </pre></td></tr></table>
 </div>
