--- a/git/windowchef/file/Makefile.html
+++ b/git/windowchef/file/Makefile.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Makefile (709B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Makefile (1084B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -51,13 +51,27 @@
 <a href="#l33" id="l33">33</a>
 <a href="#l34" id="l34">34</a>
 <a href="#l35" id="l35">35</a>
+<a href="#l36" id="l36">36</a>
+<a href="#l37" id="l37">37</a>
+<a href="#l38" id="l38">38</a>
+<a href="#l39" id="l39">39</a>
+<a href="#l40" id="l40">40</a>
+<a href="#l41" id="l41">41</a>
+<a href="#l42" id="l42">42</a>
+<a href="#l43" id="l43">43</a>
+<a href="#l44" id="l44">44</a>
+<a href="#l45" id="l45">45</a>
 </pre></td><td><pre>
 include config.mk
 
 __NAME__ = windowchef
 __NAME_CLIENT__ = waitron
-NAME_DEFINES = -D__NAME__=\&quot;$(__NAME__)\&quot; \
-			   -D__NAME_CLIENT__=\&quot;$(__NAME_CLIENT__)\&quot;
+__CONFIG_NAME__ = windowchefrc
+__THIS_VERSION__ = 0.1
+NAME_DEFINES = -D__NAME__=\&quot;$(__NAME__)\&quot;                 \
+			   -D__NAME_CLIENT__=\&quot;$(__NAME_CLIENT__)\&quot;   \
+			   -D__THIS_VERSION__=\&quot;$(__THIS_VERSION__)\&quot; \
+			   -D__CONFIG_NAME__=\&quot;$(__CONFIG_NAME__)\&quot;   \
 
 SRC = list.c wm.c client.c
 OBJ = $(SRC:.c=.o)
@@ -81,9 +95,15 @@ $(__NAME_CLIENT__): client.o
 $(OBJ): common.h list.h ipc.h types.h config.h
 
 install: all
+	mkdir -p $(DESTDIR)$(PREFIX)/bin
 	install $(__NAME__) $(DESTDIR)$(PREFIX)/bin/$(__NAME__)
 	install $(__NAME_CLIENT__) $(DESTDIR)$(PREFIX)/bin/$(__NAME_CLIENT__)
 	cd ./man; $(MAKE) install
+
+uninstall:
+	rm -f $(__NAME__) $(DESTDIR)$(PREFIX)/bin/$(__NAME__)
+	rm -f $(__NAME_CLIENT__) $(DESTDIR)$(PREFIX)/bin/$(__NAME_CLIENT__)
+	cd ./man; $(MAKE) uninstall
 
 clean:
 	rm -f $(OBJ) $(BIN)
