--- a/git/windowchef/file/README.md.html
+++ b/git/windowchef/file/README.md.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> README.md (3742B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> README.md (4134B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -134,9 +134,29 @@
 <a href="#l116" id="l116">116</a>
 <a href="#l117" id="l117">117</a>
 <a href="#l118" id="l118">118</a>
+<a href="#l119" id="l119">119</a>
+<a href="#l120" id="l120">120</a>
+<a href="#l121" id="l121">121</a>
+<a href="#l122" id="l122">122</a>
+<a href="#l123" id="l123">123</a>
+<a href="#l124" id="l124">124</a>
+<a href="#l125" id="l125">125</a>
+<a href="#l126" id="l126">126</a>
+<a href="#l127" id="l127">127</a>
+<a href="#l128" id="l128">128</a>
+<a href="#l129" id="l129">129</a>
+<a href="#l130" id="l130">130</a>
+<a href="#l131" id="l131">131</a>
+<a href="#l132" id="l132">132</a>
 </pre></td><td><pre>
 Windowchef
 ==========
+
+Disclaimer
+----------
+
+This software is a work in progress and may [break your workflow](https://xkcd.com/1172/) (yeah, it&apos;s that one xkcd comic, everyone
+knows it).
 
 Cooking windows since 2016
 --------------------------
@@ -154,13 +174,15 @@ Windowchef is written in C with the help of the XCB library for
 communicating with the X server. It supports randr and a subset of ewmh and
 icccm.
 
-### Dependencies
+Usage
+-----
 
-Windowchef depends on `xcb` to communicate with the X11 server, `xcb-randr` to
-gather information about connected displays and `xcb-util-wm` for ewmh and icccm helper functions.
+See the bundled `.sxhkdrc` and `config.h` for an example of a basic
+configuration.
 
-I couldn&apos;t find compiled documentation for `xcb-util-wm` so I compiled it and
-put it on my website [here](http://thetudor.ddns.net/res).
+You can configure windowchef by editing the `config.h` file.
+
+Additionally, you can read the man page (`windowchef(1)`).
 
 Features
 --------
@@ -177,6 +199,8 @@ Features
 	* Activate/Deactivate/Toggle a group
 * Simple and stylish solid-color border. Width can be configured
 * Gaps around the monitor
+* Configuration script. Windowchef loads a given script at startup that can be
+	used for configuration with waitron.
 
 ### Soon to come
 
@@ -200,7 +224,7 @@ groups or toggle them.
 You can tell windowchef to move and resize a window so it can fit in a cell
 of a virtual grid. The user specifies the size of the grid and the
 coordinates of the cell the window will sit in. For example, I can define a 3x3
-grid and put my window in the cell at `x = 1`, `y = 2`:
+grid and put my window in the cell at `x = 0`, `y = 2`:
 
 ```
 +-----------------------+
@@ -221,6 +245,15 @@ information about the state of the window manager through ewmh properties.
 
 Tested with [lemonbar](https://github.com/lemonboy/bar).
 
+Dependencies
+------------
+
+Windowchef depends on `xcb` to communicate with the X11 server, `xcb-randr` to
+gather information about connected displays and `xcb-util-wm` for ewmh and icccm helper functions.
+
+I couldn&apos;t find compiled documentation for `xcb-util-wm` so I compiled it and
+put it on my website [here](http://thetudor.ddns.net/res).
+
 Building windowchef and installing it
 -------------------------------------
 
@@ -235,11 +268,6 @@ $ sudo make install
 ```
 The `Makefile` respects the `DESTDIR` and `PREFIX` variables.
 
-Configuring
------------
-
-For now configuration is made by editing the `config.h` file. There&apos;s not much
-you can modify.
 
 Thanks
 ------
