--- a/git/windowchef/file/client.c.html
+++ b/git/windowchef/file/client.c.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> client.c (4558B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> client.c (7469B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -197,22 +197,191 @@
 <a href="#l179" id="l179">179</a>
 <a href="#l180" id="l180">180</a>
 <a href="#l181" id="l181">181</a>
+<a href="#l182" id="l182">182</a>
+<a href="#l183" id="l183">183</a>
+<a href="#l184" id="l184">184</a>
+<a href="#l185" id="l185">185</a>
+<a href="#l186" id="l186">186</a>
+<a href="#l187" id="l187">187</a>
+<a href="#l188" id="l188">188</a>
+<a href="#l189" id="l189">189</a>
+<a href="#l190" id="l190">190</a>
+<a href="#l191" id="l191">191</a>
+<a href="#l192" id="l192">192</a>
+<a href="#l193" id="l193">193</a>
+<a href="#l194" id="l194">194</a>
+<a href="#l195" id="l195">195</a>
+<a href="#l196" id="l196">196</a>
+<a href="#l197" id="l197">197</a>
+<a href="#l198" id="l198">198</a>
+<a href="#l199" id="l199">199</a>
+<a href="#l200" id="l200">200</a>
+<a href="#l201" id="l201">201</a>
+<a href="#l202" id="l202">202</a>
+<a href="#l203" id="l203">203</a>
+<a href="#l204" id="l204">204</a>
+<a href="#l205" id="l205">205</a>
+<a href="#l206" id="l206">206</a>
+<a href="#l207" id="l207">207</a>
+<a href="#l208" id="l208">208</a>
+<a href="#l209" id="l209">209</a>
+<a href="#l210" id="l210">210</a>
+<a href="#l211" id="l211">211</a>
+<a href="#l212" id="l212">212</a>
+<a href="#l213" id="l213">213</a>
+<a href="#l214" id="l214">214</a>
+<a href="#l215" id="l215">215</a>
+<a href="#l216" id="l216">216</a>
+<a href="#l217" id="l217">217</a>
+<a href="#l218" id="l218">218</a>
+<a href="#l219" id="l219">219</a>
+<a href="#l220" id="l220">220</a>
+<a href="#l221" id="l221">221</a>
+<a href="#l222" id="l222">222</a>
+<a href="#l223" id="l223">223</a>
+<a href="#l224" id="l224">224</a>
+<a href="#l225" id="l225">225</a>
+<a href="#l226" id="l226">226</a>
+<a href="#l227" id="l227">227</a>
+<a href="#l228" id="l228">228</a>
+<a href="#l229" id="l229">229</a>
+<a href="#l230" id="l230">230</a>
+<a href="#l231" id="l231">231</a>
+<a href="#l232" id="l232">232</a>
+<a href="#l233" id="l233">233</a>
+<a href="#l234" id="l234">234</a>
+<a href="#l235" id="l235">235</a>
+<a href="#l236" id="l236">236</a>
+<a href="#l237" id="l237">237</a>
+<a href="#l238" id="l238">238</a>
+<a href="#l239" id="l239">239</a>
+<a href="#l240" id="l240">240</a>
+<a href="#l241" id="l241">241</a>
+<a href="#l242" id="l242">242</a>
+<a href="#l243" id="l243">243</a>
+<a href="#l244" id="l244">244</a>
+<a href="#l245" id="l245">245</a>
+<a href="#l246" id="l246">246</a>
+<a href="#l247" id="l247">247</a>
+<a href="#l248" id="l248">248</a>
+<a href="#l249" id="l249">249</a>
+<a href="#l250" id="l250">250</a>
+<a href="#l251" id="l251">251</a>
+<a href="#l252" id="l252">252</a>
+<a href="#l253" id="l253">253</a>
+<a href="#l254" id="l254">254</a>
+<a href="#l255" id="l255">255</a>
+<a href="#l256" id="l256">256</a>
+<a href="#l257" id="l257">257</a>
+<a href="#l258" id="l258">258</a>
+<a href="#l259" id="l259">259</a>
+<a href="#l260" id="l260">260</a>
+<a href="#l261" id="l261">261</a>
+<a href="#l262" id="l262">262</a>
+<a href="#l263" id="l263">263</a>
+<a href="#l264" id="l264">264</a>
+<a href="#l265" id="l265">265</a>
+<a href="#l266" id="l266">266</a>
+<a href="#l267" id="l267">267</a>
+<a href="#l268" id="l268">268</a>
+<a href="#l269" id="l269">269</a>
+<a href="#l270" id="l270">270</a>
+<a href="#l271" id="l271">271</a>
+<a href="#l272" id="l272">272</a>
+<a href="#l273" id="l273">273</a>
+<a href="#l274" id="l274">274</a>
+<a href="#l275" id="l275">275</a>
+<a href="#l276" id="l276">276</a>
+<a href="#l277" id="l277">277</a>
+<a href="#l278" id="l278">278</a>
+<a href="#l279" id="l279">279</a>
+<a href="#l280" id="l280">280</a>
+<a href="#l281" id="l281">281</a>
+<a href="#l282" id="l282">282</a>
+<a href="#l283" id="l283">283</a>
+<a href="#l284" id="l284">284</a>
+<a href="#l285" id="l285">285</a>
+<a href="#l286" id="l286">286</a>
+<a href="#l287" id="l287">287</a>
+<a href="#l288" id="l288">288</a>
+<a href="#l289" id="l289">289</a>
+<a href="#l290" id="l290">290</a>
+<a href="#l291" id="l291">291</a>
+<a href="#l292" id="l292">292</a>
+<a href="#l293" id="l293">293</a>
+<a href="#l294" id="l294">294</a>
 </pre></td><td><pre>
 /* See the LICENSE file for copyright and license details. */
 
 #include &lt;stdio.h&gt;
 #include &lt;stdlib.h&gt;
 #include &lt;string.h&gt;
+#include &lt;strings.h&gt;
 #include &lt;stdbool.h&gt;
 #include &lt;xcb/xcb.h&gt;
 #include &lt;err.h&gt;
 #include &lt;errno.h&gt;
 
 #include &quot;ipc.h&quot;
+#include &quot;common.h&quot;
+#include &quot;types.h&quot;
 
-#ifndef __NAME_CLIENT__
-#define __NAME_CLIENT__ &quot;client&quot;
-#endif
+xcb_connection_t *conn;
+xcb_screen_t *scr;
+
+static bool fn_offset(uint32_t *, int, char **);
+static bool fn_naturals(uint32_t *, int, char **);
+static bool fn_bool(uint32_t *, int, char **);
+static bool fn_config(uint32_t *, int, char **);
+static bool fn_hex(uint32_t *, int, char **);
+static bool fn_position(uint32_t *, int, char **);
+
+struct Command {
+	char *string_command;
+	enum IPCCommand command;
+	int argc;
+	bool (*handler)(uint32_t *, int , char **);
+};
+
+struct ConfigEntry {
+	char *key;
+	enum IPCConfig config;
+	bool (*handler)(uint32_t *, int, char **);
+};
+
+/* vim-tabularize is cool, i swear */
+static struct Command c[] = {
+	{ &quot;window_move&quot;            , IPCWindowMove           ,  2 , fn_offset   } ,
+	{ &quot;window_move_absolute&quot;   , IPCWindowMoveAbsolute   ,  2 , fn_offset   } ,
+	{ &quot;window_resize&quot;          , IPCWindowResize         ,  2 , fn_offset   } ,
+	{ &quot;window_resize_absolute&quot; , IPCWindowResizeAbsolute ,  2 , fn_naturals } ,
+	{ &quot;window_maximize&quot;        , IPCWindowMaximize       ,  0 , NULL        } ,
+	{ &quot;window_hor_maximize&quot;    , IPCWindowHorMaximize    ,  0 , NULL        } ,
+	{ &quot;window_ver_maximize&quot;    , IPCWindowVerMaximize    ,  0 , NULL        } ,
+	{ &quot;window_close&quot;           , IPCWindowClose          ,  0 , NULL        } ,
+	{ &quot;window_put_in_grid&quot;     , IPCWindowPutInGrid      ,  4 , fn_naturals } ,
+	{ &quot;window_snap&quot;            , IPCWindowSnap           ,  1 , fn_position } ,
+	{ &quot;window_cycle&quot;           , IPCWindowCycle          ,  0 , NULL        } ,
+	{ &quot;window_rev_cycle&quot;       , IPCWindowRevCycle       ,  0 , NULL        } ,
+	{ &quot;group_add_window&quot;       , IPCGroupAddWindow       ,  1 , fn_naturals } ,
+	{ &quot;group_remove_window&quot;    , IPCGroupRemoveWindow    ,  0 , NULL        } ,
+	{ &quot;group_activate&quot;         , IPCGroupActivate        ,  1 , fn_naturals } ,
+	{ &quot;group_deactivate&quot;       , IPCGroupDeactivate      ,  1 , fn_naturals } ,
+	{ &quot;group_toggle&quot;           , IPCGroupToggle          ,  1 , fn_naturals } ,
+	{ &quot;wm_quit&quot;                , IPCWMQuit               ,  1 , fn_naturals } ,
+	{ &quot;wm_change_nr_of_groups&quot; , IPCWMChangeNrOfGroups   ,  1 , fn_naturals } ,
+	{ &quot;wm_config&quot;              , IPCWMConfig             ,  2 , fn_config   },
+};
+
+static struct ConfigEntry configs[] = {
+	{ &quot;border_width&quot;        , IPCConfigBorderWidth       , fn_naturals } ,
+	{ &quot;color_focused&quot;       , IPCConfigColorFocused      , fn_hex      } ,
+	{ &quot;color_unfocused&quot;     , IPCConfigColorUnfocused    , fn_hex      } ,
+	{ &quot;gap_width&quot;           , IPCConfigGapWidth          , fn_naturals } ,
+	{ &quot;cursor_position&quot;     , IPCConfigCursorPosition    , fn_position   } ,
+	{ &quot;groups_nr&quot;           , IPCConfigGroupsNr          , fn_naturals } ,
+	{ &quot;enable_sloppy_focus&quot; , IPCConfigEnableSloppyFocus , fn_bool     } ,
+};
 
 static bool
 fn_offset(uint32_t *data, int argc, char **argv)
@@ -251,39 +420,92 @@ fn_naturals(uint32_t *data, int argc, char **argv)
 		return true;
 }
 
-struct Command {
-	char *string_command;
-	enum IPCCommand command;
-	int argc;
-	bool (*handler)(uint32_t *, int , char **);
-};
+static bool
+fn_bool(uint32_t *data, int argc, char **argv) {
+	int i = 0;
+	char *arg;
+	do {
+		arg = argv[i];
+		if (strcasecmp(argv[i], &quot;true&quot;)       == 0
+					|| strcasecmp(arg, &quot;yes&quot;) == 0
+					|| strcasecmp(arg, &quot;t&quot;)   == 0
+					|| strcasecmp(arg, &quot;y&quot;)   == 0
+					|| strcasecmp(arg, &quot;1&quot;)   == 0)
+				data[i] = true;
+		else
+			data[i] = false;
+		i++;
+	} while (i &lt; argc);
 
-/* vim-tabularize is cool, i swear */
-static struct Command c[] = {
-	{ &quot;window_move&quot;            , IPCWindowMove           , 2 , fn_offset   }  ,
-	{ &quot;window_move_absolute&quot;   , IPCWindowMoveAbsolute   , 2 , fn_offset   }  ,
-	{ &quot;window_resize&quot;          , IPCWindowResize         , 2 , fn_offset   }  ,
-	{ &quot;window_resize_absolute&quot; , IPCWindowResizeAbsolute , 2 , fn_naturals }  ,
-	{ &quot;window_maximize&quot;        , IPCWindowMaximize       , 0 , NULL        } ,
-	{ &quot;window_hor_maximize&quot;    , IPCWindowHorMaximize    , 0 , NULL        } ,
-	{ &quot;window_ver_maximize&quot;    , IPCWindowVerMaximize    , 0 , NULL        } ,
-	{ &quot;window_close&quot;           , IPCWindowClose          , 0 , NULL        } ,
-	{ &quot;window_put_in_grid&quot;     , IPCWindowPutInGrid      , 4 , fn_naturals } ,
-	{ &quot;window_snap&quot;            , IPCWindowSnap           , 1 , fn_naturals } ,
-	{ &quot;window_cycle&quot;           , IPCWindowCycle          , 0 , NULL        } ,
-	{ &quot;window_rev_cycle&quot;       , IPCWindowRevCycle       , 0 , NULL        } ,
-	{ &quot;group_add_window&quot;       , IPCGroupAddWindow       , 1 , fn_naturals } ,
-	{ &quot;group_remove_window&quot;    , IPCGroupRemoveWindow    , 0 , NULL        } ,
-	{ &quot;group_activate&quot;         , IPCGroupActivate        , 1 , fn_naturals } ,
-	{ &quot;group_deactivate&quot;       , IPCGroupDeactivate      , 1 , fn_naturals } ,
-	{ &quot;group_toggle&quot;           , IPCGroupToggle          , 1 , fn_naturals } ,
-	{ &quot;wm_quit&quot;                , IPCWMQuit               , 1 , fn_naturals } ,
-	{ &quot;wm_change_nr_of_groups&quot; , IPCWMChangeNrOfGroups   , 1 , fn_naturals } ,
+	return true;
+}
 
-};
+static bool
+fn_config(uint32_t *data, int argc, char **argv) {
+	char *key, *value;
+	bool status;
+	int i;
 
-xcb_connection_t *conn;
-xcb_screen_t *scr;
+	key = argv[0];
+	value = argv[1];
+
+	i = 0;
+	while (i &lt; NR_IPC_CONFIGS &amp;&amp; strcmp(key, configs[i].key) != 0)
+		i++;
+
+	if (i &lt; NR_IPC_CONFIGS) {
+		/* XXX: hardcoded value */
+		data[0] = configs[i].config;
+		status = (configs[i].handler)(data + 1, argc - 1, argv + 1);
+
+		if (status == false)
+			errx(EXIT_FAILURE, &quot;malformed input&quot;);
+	} else {
+		errx(EXIT_FAILURE, &quot;no such config key&quot;);
+	}
+	return true;
+}
+
+static bool
+fn_hex(uint32_t *data, int argc, char **argv)
+{
+	int i = 0;
+	do {
+		errno = 0;
+		data[i] = strtol(argv[i], NULL, 16);
+		i++;
+	} while (i &lt; argc &amp;&amp; errno == 0);
+
+	if (errno != 0)
+		return false;
+	else
+		return true;
+}
+
+static bool
+fn_position(uint32_t *data, int argc, char **argv)
+{
+	char *pos = argv[0];
+	enum position snap_pos;
+
+	if (strcasecmp(pos, &quot;topleft&quot;) == 0)
+		snap_pos = TOP_LEFT;
+	else if (strcasecmp(pos, &quot;topright&quot;) == 0)
+		snap_pos = TOP_RIGHT;
+	else if (strcasecmp(pos, &quot;bottomleft&quot;) == 0)
+		snap_pos = BOTTOM_LEFT;
+	else if (strcasecmp(pos, &quot;bottomright&quot;) == 0)
+		snap_pos = BOTTOM_RIGHT;
+	else if (strcasecmp(pos, &quot;middle&quot;) == 0)
+		snap_pos = CENTER;
+	else
+		return false;
+
+	(void)(argc);
+	data[0] = snap_pos;
+
+	return true;
+}
 
 static void
 init_xcb(xcb_connection_t **conn)
@@ -337,10 +559,11 @@ send_command(struct Command *c, int argc, char **argv)
 }
 
 void
-usage()
+usage(char *name)
 {
-	fprintf(stderr, &quot;Usage: %s &lt;command&gt; [args]...\n&quot;, __NAME_CLIENT__);
-
+	fprintf(stderr, &quot;Usage: %s &lt;command&gt; [args...]\n&quot;, name);
+	fprintf(stderr, &quot;\n&quot;);
+	fprintf(stderr, &quot;%s %s\n&quot;, __NAME_CLIENT__, __THIS_VERSION__);
 	exit(1);
 }
 
@@ -349,10 +572,11 @@ int main(int argc, char **argv)
 	int i;
 	int command_argc;
 	char **command_argv;
-	init_xcb(&amp;conn);
 
-	if (argc == 1)
-		usage();
+	if (argc == 1 || (argc == 2 &amp;&amp; strcmp(argv[1], &quot;-h&quot;) == 0))
+		usage(argv[0]);
+
+	init_xcb(&amp;conn);
 
 	/* argc - program name - command to send */
 	command_argc = argc - 2;
@@ -363,11 +587,13 @@ int main(int argc, char **argv)
 		i++;
 
 	if (i &lt; NR_IPC_COMMANDS) {
-		if (command_argc &lt; c[i].argc)
-			errx(EXIT_FAILURE, &quot;not enough argmuents&quot;);
-		else if (command_argc &gt; c[i].argc)
-			warnx(&quot;too many arguments&quot;);
-		else
+		if (c[i].argc != -1) {
+			if (command_argc &lt; c[i].argc)
+				errx(EXIT_FAILURE, &quot;not enough argmuents&quot;);
+			else if (command_argc &gt; c[i].argc)
+				warnx(&quot;too many arguments&quot;);
+		}
+		if (c[i].argc == -1 || command_argc == c[i].argc)
 			send_command(&amp;c[i], command_argc, command_argv);
 
 	} else {
