--- a/git/windowchef/file/common.h.html
+++ b/git/windowchef/file/common.h.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> common.h (212B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> common.h (465B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -28,6 +28,24 @@
 <a href="#l10" id="l10">10</a>
 <a href="#l11" id="l11">11</a>
 <a href="#l12" id="l12">12</a>
+<a href="#l13" id="l13">13</a>
+<a href="#l14" id="l14">14</a>
+<a href="#l15" id="l15">15</a>
+<a href="#l16" id="l16">16</a>
+<a href="#l17" id="l17">17</a>
+<a href="#l18" id="l18">18</a>
+<a href="#l19" id="l19">19</a>
+<a href="#l20" id="l20">20</a>
+<a href="#l21" id="l21">21</a>
+<a href="#l22" id="l22">22</a>
+<a href="#l23" id="l23">23</a>
+<a href="#l24" id="l24">24</a>
+<a href="#l25" id="l25">25</a>
+<a href="#l26" id="l26">26</a>
+<a href="#l27" id="l27">27</a>
+<a href="#l28" id="l28">28</a>
+<a href="#l29" id="l29">29</a>
+<a href="#l30" id="l30">30</a>
 </pre></td><td><pre>
 /* See the LICENSE file for copyright and license details. */
 
@@ -39,6 +57,24 @@
 #else
 #define DMSG(fmt, ...)
 #endif
+
+#ifndef __NAME__
+#define __NAME__ &quot;wm&quot;
+#endif
+
+#ifndef __NAME_CLIENT__
+#define __NAME_CLIENT__ &quot;wmc&quot;
+#endif
+
+#ifndef __CONFIG_NAME__
+#define __CONFIG_NAME__ &quot;wmrc&quot;
+#endif
+
+#ifndef __THIS_VERSION__
+#define __THIS_VERSION__ &quot;&quot;
+#endif
+
+#define MAXLEN 256
 
 #endif
 </pre></td></tr></table>
