--- a/git/windowchef/file/ipc.h.html
+++ b/git/windowchef/file/ipc.h.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> ipc.h (718B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> ipc.h (831B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -58,6 +58,10 @@
 <a href="#l40" id="l40">40</a>
 <a href="#l41" id="l41">41</a>
 <a href="#l42" id="l42">42</a>
+<a href="#l43" id="l43">43</a>
+<a href="#l44" id="l44">44</a>
+<a href="#l45" id="l45">45</a>
+<a href="#l46" id="l46">46</a>
 </pre></td><td><pre>
 /* See the LICENSE file for copyright and license details. */
 
@@ -89,15 +93,19 @@ enum IPCCommand {
 	IPCGroupToggle,
 	IPCWMQuit,
 	IPCWMChangeNrOfGroups,
-	NR_IPC_COMMANDS,
+	IPCWMConfig,
+	NR_IPC_COMMANDS
 };
 
-enum SnapPosition {
-	SnapTopLeft = 0,
-	SnapTopRight,
-	SnapBottomLeft,
-	SnapBottomRight,
-	SnapMiddle,
+enum IPCConfig {
+	IPCConfigBorderWidth,
+	IPCConfigColorFocused,
+	IPCConfigColorUnfocused,
+	IPCConfigGapWidth,
+	IPCConfigCursorPosition,
+	IPCConfigGroupsNr,
+	IPCConfigEnableSloppyFocus,
+	NR_IPC_CONFIGS
 };
 
 #endif
