--- a/git/windowchef/file/man/Makefile.html
+++ b/git/windowchef/file/man/Makefile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Makefile (347B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Makefile (377B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -39,16 +39,22 @@
 <a href="#l21" id="l21">21</a>
 <a href="#l22" id="l22">22</a>
 <a href="#l23" id="l23">23</a>
+<a href="#l24" id="l24">24</a>
+<a href="#l25" id="l25">25</a>
+<a href="#l26" id="l26">26</a>
 </pre></td><td><pre>
 include ../config.mk
 
-MAN = windowchef.1
+MAN = windowchef.1 \
+	  waitron.1
 MANUAL = &quot;Windowchef Manual&quot;
 
 .POSIX:
 
-page:
-	ronn --manual=$(MANUAL) $(MAN).md
+all: $(MAN)
+
+%.1: *.1.md
+	ronn --manual=$(MANUAL) $@.md
 
 clean:
 	rm *.1
