--- a/git/windowchef/file/man/windowchef.1.md.html
+++ b/git/windowchef/file/man/windowchef.1.md.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> windowchef.1.md (3037B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> windowchef.1.md (943B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -56,181 +56,47 @@
 <a href="#l38" id="l38">38</a>
 <a href="#l39" id="l39">39</a>
 <a href="#l40" id="l40">40</a>
-<a href="#l41" id="l41">41</a>
-<a href="#l42" id="l42">42</a>
-<a href="#l43" id="l43">43</a>
-<a href="#l44" id="l44">44</a>
-<a href="#l45" id="l45">45</a>
-<a href="#l46" id="l46">46</a>
-<a href="#l47" id="l47">47</a>
-<a href="#l48" id="l48">48</a>
-<a href="#l49" id="l49">49</a>
-<a href="#l50" id="l50">50</a>
-<a href="#l51" id="l51">51</a>
-<a href="#l52" id="l52">52</a>
-<a href="#l53" id="l53">53</a>
-<a href="#l54" id="l54">54</a>
-<a href="#l55" id="l55">55</a>
-<a href="#l56" id="l56">56</a>
-<a href="#l57" id="l57">57</a>
-<a href="#l58" id="l58">58</a>
-<a href="#l59" id="l59">59</a>
-<a href="#l60" id="l60">60</a>
-<a href="#l61" id="l61">61</a>
-<a href="#l62" id="l62">62</a>
-<a href="#l63" id="l63">63</a>
-<a href="#l64" id="l64">64</a>
-<a href="#l65" id="l65">65</a>
-<a href="#l66" id="l66">66</a>
-<a href="#l67" id="l67">67</a>
-<a href="#l68" id="l68">68</a>
-<a href="#l69" id="l69">69</a>
-<a href="#l70" id="l70">70</a>
-<a href="#l71" id="l71">71</a>
-<a href="#l72" id="l72">72</a>
-<a href="#l73" id="l73">73</a>
-<a href="#l74" id="l74">74</a>
-<a href="#l75" id="l75">75</a>
-<a href="#l76" id="l76">76</a>
-<a href="#l77" id="l77">77</a>
-<a href="#l78" id="l78">78</a>
-<a href="#l79" id="l79">79</a>
-<a href="#l80" id="l80">80</a>
-<a href="#l81" id="l81">81</a>
-<a href="#l82" id="l82">82</a>
-<a href="#l83" id="l83">83</a>
-<a href="#l84" id="l84">84</a>
-<a href="#l85" id="l85">85</a>
-<a href="#l86" id="l86">86</a>
-<a href="#l87" id="l87">87</a>
-<a href="#l88" id="l88">88</a>
-<a href="#l89" id="l89">89</a>
-<a href="#l90" id="l90">90</a>
-<a href="#l91" id="l91">91</a>
-<a href="#l92" id="l92">92</a>
-<a href="#l93" id="l93">93</a>
-<a href="#l94" id="l94">94</a>
-<a href="#l95" id="l95">95</a>
-<a href="#l96" id="l96">96</a>
-<a href="#l97" id="l97">97</a>
-<a href="#l98" id="l98">98</a>
-<a href="#l99" id="l99">99</a>
-<a href="#l100" id="l100">100</a>
-<a href="#l101" id="l101">101</a>
-<a href="#l102" id="l102">102</a>
-<a href="#l103" id="l103">103</a>
-<a href="#l104" id="l104">104</a>
-<a href="#l105" id="l105">105</a>
-<a href="#l106" id="l106">106</a>
-<a href="#l107" id="l107">107</a>
 </pre></td><td><pre>
 windowchef(1) -- A static window cooker
 =====================================
 
 ## SYNOPSIS
 
-`windowchef` [-v]
+`windowchef` [-h]
 
 ## DESCRIPTION
 
 `windowchef` is a stacking window manager that doesn&apos;t handle keyboard or
-pointer inputs. It is controlled by `waitron` and configured by editing the
-`config.h` file and recompiling.
+pointer inputs. It is controlled and configured by `waitron`.
+
+At startup,
+`windowchef` runs a script located at `$XDG_CONFIG_HOME/windowchef/windowchefrc`
+(`$XDG_CONFIG_HOME` is usually `~/.config`). The path of the config file can be
+overridden with the `-c` flag.
 
 ## OPTIONS
 
-* `-v`:
-	Print version information.
+* `-h`:
+	Print usage and version information.
 
-## COMMANDS
+* `-c` &lt;config_path&gt;:
+	Load script from &lt;config_path&gt; instead of
+	`$XDG_CONFIG_HOME/windowchef/windowchefrc`.
 
-* `window_move` &lt;x&gt; &lt;y&gt;:
-	Move the focused window &lt;y&gt; pixels horizontally and &lt;y&gt; pixels
-	vertically.
+## SEE ALSO
 
-* `window_move_absolute` &lt;x&gt; &lt;y&gt;:
-	Move the focused window to the position given by &lt;x&gt; and &lt;y&gt;.
-
-* `window_resize` &lt;x&gt; &lt;y&gt;:
-	Resize the focused window based on the relative pixel values &lt;x&gt; and &lt;y&gt;.
-
-* `window_resize_absolute` &lt;width&gt; &lt;height&gt;:
-	Resize the focused window up to &lt;width&gt; and &lt;height&gt;.
-
-* `window_maximize`:
-	Hide the border and maximize the focused window on the current monitor.
-	Execute it again after maximizing to revert the state of the window.
-
-* `window_hor_maximize`:
-	Horizontally maximize the focused window on the current monitor, preserving
-	its &lt;x&gt; component. Leaves a gap at the left and right of the monitor that
-	can be configured. Execute it again after maximizing to revert the state of the window.
-
-* `window_ver_maximize`:
-	Vertically maximize the focused window on the current monitor, preserving
-	its &lt;y&gt; component. Leaves a gap at the top and bottom of the monitor whose
-	width can be configured. Execute it again after maximizing to revert the state of the window.
-
-* `window_close`:
-	Closes the focused window.
-
-* `window_put_in_grid` &lt;grid_width&gt; &lt;grid_height&gt; &lt;cell_x&gt; &lt;cell_y&gt;:
-	Moves and resizes the focused windows accordingly to fit in a cell defined
-	by the &lt;cell_x&gt; and &lt;cell_y&gt; coordinates in a virtual grid with width
-	&lt;grid_width&gt; and height &lt;grid_height&gt; on the current monitor.
-
-* `window_snap` &lt;pos&gt;:
-	Snap the window on the screen in a position defined by &lt;pos&gt;. &lt;pos&gt; can be:
-
-	`0` for top-left.
-
-	`1` for to-right.
-
-	`2` for bottom-left.
-
-	`3` for bottom-right.
-
-	`4` for the middle.
-
-* `window_cycle`:
-	Cycle through mapped windows.
-
-* `window_rev_cycle`:
-	Reverse cycle through mapped windows.
-
-* `group_add_window` &lt;group_nr&gt;:
-	Add the focused window to the &lt;group_nr&gt; group.
-
-	Group numbers start from 0 and end at &lt;GROUPS_NO&gt; - 1.
-
-* `group_remove_window`:
-	Remove the focused window from its current group.
-
-* `group_activate` &lt;group_nr&gt;:
-	Map all windows that belong to the &lt;group_nr&gt; group.
-
-* `group_deactivate` &lt;group_nr&gt;:
-	Unmap all windows that belong to the &lt;group_nr&gt; group.
-
-* `group_toggle` &lt;group_nr&gt;:
-	Toggle the &lt;group_nr&gt; group.
-
-* `wm_quit` &lt;exit_status&gt;:
-	Quit windowchef with exit_status &lt;exit_status&gt;.
-
-* `wm_change_number_of_groups` &lt;number_of_groups&gt;:
-	Change the number of maximum groups to &lt;number_of_groups&gt;.
-
-	Windows that belong to a group that has a &lt;group_nr&gt; greater or equal to
-	&lt;number_of_groups&gt; will become orphaned.
+waitron(1), sxhkd(1), xinit(1)
 
 ## AUTHOR
 
 Tudor Roman `&lt;tudurom at gmail dot com&gt;`
 
-## DISCLAIMER
+The default color scheme that comes with `windowchef` is [5725](https://github.com/dkeg/crayolo#5725) by dkeg.
 
-I deleted all the manpages from my system by mistake while writing this thing.
+## DERP
+
+I deleted all the manpages from my system by mistake while writing this manual
+page.
 </pre></td></tr></table>
 </div>
 </body>
