--- a/git/windowchef/log.html
+++ b/git/windowchef/log.html
@@ -18,6 +18,19 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-09-19 16:36</td><td><a href="commit/25ec980ed504b60a7a2cde639b7ceded9ae42b8a.html">turned on optimization</a></td><td>Tudor</td><td class="num">2</td><td class="num">+2</td><td class="num">-2</td></tr>
+<tr><td>2016-09-16 19:17</td><td><a href="commit/8514de247ebc625b9620d85ae2de9ba5421c2624.html">fix manpage installing</a></td><td>Tudor</td><td class="num">1</td><td class="num">+2</td><td class="num">-2</td></tr>
+<tr><td>2016-09-16 19:15</td><td><a href="commit/227b52d3b6c6ca120ec4648543d97dc3aa6f28d3.html">add mkdir in makefile</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-0</td></tr>
+<tr><td>2016-09-16 18:27</td><td><a href="commit/dbcf72ada7c57d5f7492fc3100538d2561398bc7.html">fix readme</a></td><td>Tudor</td><td class="num">1</td><td class="num">+3</td><td class="num">-1</td></tr>
+<tr><td>2016-09-16 18:13</td><td><a href="commit/d80aed4b2ab0b57efa7ec1c14e8a4cccb55ba7ec.html">unified format for snapping windows and setting the cursor position</a></td><td>Tudor</td><td class="num">5</td><td class="num">+58</td><td class="num">-96</td></tr>
+<tr><td>2016-09-16 17:32</td><td><a href="commit/860b7f221107b4a9ebc7e14ed63e3c0ce7aaf9ff.html">forgot about that case</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-0</td></tr>
+<tr><td>2016-09-16 16:45</td><td><a href="commit/5571f15aeded3d1942f91f554ad73af0fa421a39.html">updated bundled windowchefrc with options from config.h</a></td><td>Tudor</td><td class="num">1</td><td class="num">+4</td><td class="num">-4</td></tr>
+<tr><td>2016-09-16 16:43</td><td><a href="commit/1433e1391f223de1e5b0dd630b265c70036273c6.html">removed debug flag and misc tweaks</a></td><td>Tudor</td><td class="num">6</td><td class="num">+35</td><td class="num">-5</td></tr>
+<tr><td>2016-09-15 19:18</td><td><a href="commit/3b3233fc298ae5de1cfcbf6f9a0712d20e29f0a3.html">proper configuration support</a></td><td>Tudor</td><td class="num">7</td><td class="num">+128</td><td class="num">-43</td></tr>
+<tr><td>2016-09-14 18:09</td><td><a href="commit/fcc4dd192f7c242e84b7a155d4bcd9fcd1021504.html">added uninstall rule to makefile</a></td><td>Tudor</td><td class="num">1</td><td class="num">+5</td><td class="num">-0</td></tr>
+<tr><td>2016-09-14 18:01</td><td><a href="commit/91fed1761130e1de84adbbf8a3bbda1760d03f2f.html">configuration through waitron, man page for waitron</a></td><td>Tudor</td><td class="num">15</td><td class="num">+759</td><td class="num">-303</td></tr>
+<tr><td>2016-09-12 17:44</td><td><a href="commit/6a21202ac0570b883509c0a5ea4c74303759fd66.html">added comments in config.h</a></td><td>Tudor</td><td class="num">2</td><td class="num">+22</td><td class="num">-10</td></tr>
+<tr><td>2016-09-12 17:10</td><td><a href="commit/bbb02018ba6dcdf0121959d57ad3fc6d427234fa.html">focus window after maximizing</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-0</td></tr>
 <tr><td>2016-09-08 19:02</td><td><a href="commit/1175342d724a00288af7e0fdfa84edfa0236a04f.html">added man page</a></td><td>Tudor</td><td class="num">5</td><td class="num">+413</td><td class="num">-0</td></tr>
 <tr><td>2016-09-08 16:45</td><td><a href="commit/b8afdf8bb339ce1169ac4075fb6db83e02d312e4.html">added two more items on the todo list</a></td><td>Tudor</td><td class="num">1</td><td class="num">+2</td><td class="num">-0</td></tr>
 <tr><td>2016-09-08 15:41</td><td><a href="commit/2d1db6223e2e376ce652da68f8b0030561cf76d9.html">window snap example in .sxhkdrc</a></td><td>Tudor</td><td class="num">1</td><td class="num">+3</td><td class="num">-0</td></tr>
